--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,12 @@ var/
 *.manifest
 *.spec
 
+# Text backup files
+*.bak
+
+#Database
+*.sqlite3
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
